<resources>
    <string name="app_name">Accounts</string>
    <string name="title_activity_history">Account details</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit_account_btn_text">Edit</string>
    <string name="title_activity_media">Media</string>
    <string name="title_activity_category">Kategorie</string>
    <string name="shop">sklep</string>
    <string name="invoice_number">numer paragonu</string>
    <string name="add_invoice">Dodaj wydatek</string>
    <string name="add_income">Dodaj przychód</string>
    <string name="transfer_money">Przesuń środki</string>
    <string name="previous_month">Poprzedni</string>
    <string name="next_month">Następny</string>
    <string name="income">PRZYCHODY:</string>
    <string name="zero">0</string>
    <string name="outcome">WYDATKI:</string>
    <string name="create_outcome">Utwórz wydatek</string>
    <string name="save_outcome">Zapisz wydatek</string>
    <string name="zero_money_format">0.00</string>
    <string name="cancel_outcome">Anuluj wydatek</string>
    <string name="save">Zapisz</string>
    <string name="money_earned">Zarobione:</string>
    <string name="money_planned">Zaplanowane:</string>
    <string name="money_spend">Wydane:</string>
    <string name="recalculate">Przelicz</string>
    <string name="start_menu_account">KONTA</string>
    <string name="start_menu_budget">BUDŻET</string>
    <string name="start_menu_charts">WYKRESY</string>
    <string name="start_menu_media">MEDIA</string>
    <string name="start_menu_categories">KATEGORIE</string>
    <string name="start_menu_settings">USTAWIENIA</string>
    <string name="host_api_url">Adres servera</string>
    <string name="budget_percentage_used">Procent:</string>
    <string name="edit">Edytuj</string>
    <string name="product">produkt</string>
    <string name="price">cena</string>
    <string name="amount">ilość</string>
    <string name="discount">rabat</string>
    <string name="cancel">Anuluj</string>
    <string name="ok">OK</string>
    <string name="delete_invoice">delete invoice</string>
    <string name="last_month_outcome">Ostani miesiąc %1$s</string>
    <string name="change_item_category">Zmień kategorię przedmiotu</string>
    <string name="show_assortment_expenses">Pokaż szczegóły miesiąca</string>
    <string name="account_name">Nazwa konta</string>
    <string name="account_money">Kwota</string>
    <string name="invoice_details_title">Szczegóły paragonu</string>
    <string name="change_account">Zmień konto</string>
    <string name="error_missing_account_id">Missing accountId</string>
    <string name="error_failed_update_account_data">Failed to update account data</string>
    <string name="error_invalid_amount">Invalid amount value</string>
    <string name="error_empty_account_name">Account name cannot be empty</string>
    <string name="error_failed_update_budget_data">Failed to update budget data</string>
    <string name="error_failed_remove_invoice">Failed to remove selected invoice</string>
    <string name="error_failed_load_account_invoices">Failed to load account invoices</string>
    <string name="error_failed_update_invoice_account">Failed to update invoice account</string>
    <string name="success_invoice_account_updated">Invoice account updated</string>
    <string name="success_invoice_removed">Selected invoice removed</string>
    <string name="dialog_title_invoice_removal">Invoice removal</string>
    <string name="dialog_message_remove_selected_invoice">Do you want to remove selected invoice?</string>
    <string name="dialog_title_change_account_invoice">Change account for selected invoice</string>
    <string name="error_failed_load_income_type">Failed to load income type</string>
    <string name="error_failed_load_account_operations">Failed to load account operations</string>
    <string name="success_money_transfer_completed">Money transfer completed</string>
    <string name="error_failed_transfer_money">Failed to transfer money</string>
    <string name="success_income_added">Income added</string>
    <string name="error_failed_add_income">Failed to add income</string>
    <string name="error_no_target_account_selected">No target account selected</string>
    <string name="dialog_title_add_account_income">Add account income</string>
    <string name="dialog_title_transfer_money">Transfer money</string>
    <string name="label_description">Description</string>
    <string name="label_value">Value</string>
    <string name="label_target_account">Target account</string>
    <string name="content_desc_delete_invoice">Delete invoice</string>
    <string name="error_failed_load_account_income">Failed to load account income</string>
    <string name="error_invalid_price_or_amount">Invalid value for price or amount</string>
    <string name="empty_state_no_data">No data available. Please add new data</string>
    <string name="dialog_title_add_new_media_type">Add new media type</string>
    <string name="error_failed_load_media_types_data">Failed to load media types data</string>
    <string name="error_failed_add_new_media_with_name">Failed to add new media with name: %1$s</string>
    <string name="error_failed_add_new_media">Failed to add new media</string>
</resources>
